--- a/2장/선영/물리 엔진과 오브젝트 용어.md
+++ b/2장/선영/물리 엔진과 오브젝트 용어.md
@@ -96,3 +96,13 @@ MySQL, MariaDB에서 기본 키는 <u>클러스터형 인덱스</u>로 작동한
 <br>
 
 📢 ***저장된 데이터를 검색할 일이 많을 때는 인덱스를 설계하고 생성하는 과정이 매우 중요!***
+
+<br>
+
+- **뷰** <br>
+가상 테이블 <br>
+시스템을 안전하게 운영하고 개발할 수 있는 환경을 제공하는 만큼 보안성 측면에서 뷰의 가치가 부각될 수 있다. <br><br>
+
+> 💡 ***뷰를 사용하는 이유*** <br><br>
+일부 데이터에 대해서만 데이터를 공개하고, 노출에 민감한 데이터에 대해서는 제약을 설정할 수 있는 보안성 때문이다. <br>
+한편 여러 개의 테이블을 병합(join)해서 활용할 때는 성능을 고려한 최적화된 뷰를 생성함으로써 일관된 성능을 제공할 수 있다.
