--- a/2장/선영/개념적인 튜닝 용어.md
+++ b/2장/선영/개념적인 튜닝 용어.md
@@ -1,3 +1,62 @@
 ## 개념적인 튜닝 용어
 ### 기초 용어
 ---
+**오브젝트 스캔 유형** <br>
+1. **테이블 스캔** <br> 
+    인덱스를 거치지 않고 바로 디스크에 위치한 테이블 데이터에 접근하는 유형
+2. **인덱스 스캔** <br>
+    인덱스로 테이블 데이터를 바로 찾아가는 유형
+
+<br>
+
+- **테이블 풀 스캔**<br>
+    인덱스를 거치지 않고 테이블로 바로 직행하여 처음부터 끝까지 데이터를 훑어보는 방식 <br>
+    WHERE 절의 조건문을 기준으로 활용할 인덱스가 없거나 전체 데이터 대비 대량의 데이터가 필요할 때 테이블 풀 스캔을 수행할 수 있다 <br>
+
+- **인덱스 범위 스캔** <br>
+    인덱스를 범위 기준으로 스캔한 뒤 스캔 결과를 토대로 테이블의 데이터를 찾아가는 방식 <br>
+    <u>비교 연산 및 구문에 포함될 경우</u> 인덱스 범위 스캔으로 수행 <br>
+
+- **인덱스 풀 스캔** <br>
+    인덱스를 처음부터 끝가지 수행하는 방식 <br>
+    테이블에 접근하지 않고 <u>인덱스로 구성된 열 정보만 요구한</u> SQL 문에서 인덱스 풀 스캔이 수행된다 <br>
+
+- **인덱스 고유 스캔** <br>
+    기본 키나 고유 인덱스로 테이블에 접근하는 방식 <br>
+    ```WHERE 절에 = 조건```으로 작성하며, 해당 조인 열이 <u>기본 키 또는 고유 인덱스의 선두 열로 설정</u>되었을 때 활용 <br>
+
+- **인덱스 루스 스캔** <br>
+    인덱스의 필요한 부분들만 골라 스캔하는 방식 <br>
+    WHERE 절 조건문 기준으로 필요한 데이터와 필요하지 않은 데이터를 구분한 뒤 불필요한 인덱스 키는 무시 <br>
+    보통 ```GROUP BY``` 구문이나 ```MAX```, ```MIN``` 함수가 포함되면 작동한다. <br>
+- **인덱스 병합 스캔** <br>
+    테이블 내에 생성된 인덱스들을 통합해서 스캔하는 방식 <br>
+    WHERE 문 조건절의 열들이 서로 다른 인덱스로 존재하면 옵티마이저가 해당하는 인덱스를 가져와서 모두 활용하는 방식을 취한다 <br>
+    → ```결합```과 ```교차``` 방식이 있다 <br>
+    > 📢 ***별개로 생성된 인덱스들은 보통 하나의 인덱스로 통합하여 SQL 튜닝을 수행하거나 SQL 문 자체를 독립된 하나의 인덱스만 수행하도록 변경할 수 있다.*** 
+
+<br>
+
+### 디스크 접근 방식
+---
+> 💡***페이지란?*** <br>
+데이터를 검색하는 최소 단위로, 페이지 단위로 데이터 읽고 쓰기를 수행할 수 있다.
+
+- **시퀀셜 액세스** <br>
+<u>물리적으로 인접한 페이지를 차례대로 읽는</u> 순차 접근 방식으로, 보통 테이블 풀 스캔에서 활용한다 <br>
+
+- **랜덤 액세스** <br>
+물리적으로 떨어진 페이지들에 임의로 접근하는 임의 접근 방식 <br>
+→ 최소한의 페이지에 접근할 수 있도록 접근 범위를 줄이고 효율적인 인덱스를 활용할 수 있도록 튜닝해야 한다 <br>
+
+<br>
+
+### 조건 유형
+---
+- **액세스 조건** <br>
+```디스크에 있는 데이터에 어떻게 접근할 것인가``` <br><br>
+✅ 옵티마이저는 WHERE 절의 특정 조건문을 이용해 소량의 데이터를 가져오고, 인덱스를 통해 시간 낭비를 줄이는 조건절을 선택 <br>
+
+- **필터 조건** <br>
+액세스 조건을 이용해 MySQL 엔진으로 가져온 데이터를 기준으로, 추가로 <u>불필요한 데이터를 제거하거나 가공하는 조건</u> <br>
+
