docs: 응용 용어 최종 정리

--- a/2장/선영/응용 용어.md
+++ b/2장/선영/응용 용어.md
@@ -22,3 +22,64 @@
 
 → 특정 열에 중복된 값이 많다면 카디널리티가 낮다고 할 수 있다. 한편, 특정 열에 중복되는 값이 적다면 카디널리티가 높다고 평가할 수 있다. 즉 ***중복도가 높으면 카디널리티가 낮고 중복도가 낮으면 카디널리티가 높다*** <br>
 ex. 예/아니오 유형의 데이터가 저장되는 열들이 카디널리티가 낮은 사례이다. 
+
+<br>
+
+### 힌트
+---
+데이터를 빨리 찾을 수 있게 추가 정보를 전달하는 게 힌트이다. <br>
+```
+SELECT 학번, 전공코드
+FROM 학생 /*! USE INDEX (학생_IDX01)*/
+WHERE 이름 = '유재석';
+
+SELECT 학번, 전공코드
+FROM 학생 USE INDEX (학생_IDX01)
+WHERE 이름 = '유재석';
+```
+- USE INDEX 키워드를 사용하며 주석처럼 명시하거나 주석 표기 없이 쿼리의 일부로 작성할 수 있다.
+- 여기서 학생_IDX01은 인덱스 이름
+
+> 💡 옵티마이저가 비효율적이라고 예측하면 사용자가 작성한 힌트는 무시될 수 있다.
+
+<br>
+
+### 콜레이션
+---
+특정 문자셋으로 데이터베이스에 저장된 값을 비교하거나 정렬하는 작업의 규칙을 의미한다. <br>
+- utf8_bin : A < B < a < b
+- utf8_general_ci : A < a < B < b
+
+콜레이션은 **데이터베이스 단위, 테이블 단위, 심지어 열 단위까지** 세세하게 설정할 수 있다. <br>
+만약에 학생 테이블의 콜레이션이 utf8_general_ci로 설정되어 있다면, 학번 열과 전공 코드 열에 콜레이션이 명시되어 있지 않더라도 utf8_general_ci가 적용된다. <br>
+→ 이때 만약 이름 열에 콜레이션 utf8_bin을 명시했다면 상위 테이블의 콜레이션은 무시한다. 
+
+> 💡 **캐릭터 셋**은 `데이터 저장`을 어떻게 할 것인가, **콜레이션**은 `데이터 정렬`을 어떻게 할 것인가
+
+<br>
+
+### 통계정보
+---
+옵티마이저는 통계정보에 기반을 두고 SQL 문의 실행 계획을 수립한다 <br>
+테이블 통계정보와 인덱스 통계정보, 선택적인 열 통계정보를 토대로 어떤 인덱스를 활용해 데이터에 액세스할 것인지, 어떤 테이블을 
+드라이빙 테이블로 선택할 지 등을 정한다. <br>
+
+✅ ***통계정보의 최신성 유지 및 관리가 매우 중요하다***
+
+<br>
+
+### 히스토그램
+---
+테이블의 열값이 어떻게 분포되어 있는지를 확인하는 통계정보이다. <br>
+옵티마이저가 실행 계획을 최적화하고자 참고하는 정보!
+→ 만약 특정 열값들의 통계정보가 히스토그램으로 수집되지 않았다면, ```중복이 제거된 열값의 개수 (COUNT(DISTINCT 열명))```로 <u>대략적인 열값의 분포를 예측하고 실행 계획을 수립한다.</u> <br>
+
+> 💡 실제 데이터베이스에서 관리하는 히스토그램의 버킷은 최댓값을 보관한다.
+
+```
+-- MySQL 기준
+ANALYZE TABLE 테이블명 UPDATE HISTOGRAM ON 열명 나열;
+
+ex. ANALYZE TABLE 사원 UPDATE HISTOGRAM ON 이름;
+SELECT * FROM INFORMATION_SCHEMA.COLUMN_STATISTICS; -- 결과 확인
+```
