docs: add document `DB용어 정리`

--- a/2장/선영/응용 용어.md
+++ b/2장/선영/응용 용어.md
@@ -2,7 +2,8 @@
 ### 선택도
 ---
 테이블의 특정 열을 기준으로 해당 열의 조건절에 따라 선택되는 ```데이터 비율```을 의미한다. <br>
-→ 만약 해당 열에 중복되는 데이터가 많다면 '선택도가 높다'고 평가할 수 있으며, 실제로 조건절에 따라 대량의 데이터가 선택될 것이다. 한편 해당 열에 중복되는 데이터가 적다면 '선택도가 낮다'고 평가할 수 있다. <br><br>
+
+→ 만약 해당 열에 중복되는 데이터가 많다면 `선택도가 높다`고 평가할 수 있으며, 실제로 조건절에 따라 대량의 데이터가 선택될 것이다. 한편 해당 열에 중복되는 데이터가 적다면 `선택도가 낮다`고 평가할 수 있다. <br><br>
 
 ✅ ```낮은 선택도```를 가지는 열은 데이터를 조회하는 SQL 문에서 원하는 데이터를 빨리 찾기 위한 인덱스 열을 생성할 때 주요 고려대상이 된다.
 
@@ -83,3 +84,4 @@ ANALYZE TABLE 테이블명 UPDATE HISTOGRAM ON 열명 나열;
 ex. ANALYZE TABLE 사원 UPDATE HISTOGRAM ON 이름;
 SELECT * FROM INFORMATION_SCHEMA.COLUMN_STATISTICS; -- 결과 확인
 ```
+ex. 예/아니오 유형의 데이터가 저장되는 열들이 카디널리티가 낮은 사례이다. 
