--- a/3장/선영/실행 계획 수행.md
+++ b/3장/선영/실행 계획 수행.md
@@ -12,9 +12,27 @@ DESCRIBE SQL 문;
 DESC SQL 문;
 ```
 
+<br>
+
 ### 기본 실행 계획 항목 분석
 ---
 **ID** <br>
 실행 순서를 표기하는 숫자 <br>
 → SQL 문이 수행되는 차례를 ID로 표기한 것으로, 조인할 때는 똑같은 ID가 표시된다. <br>
 ```💡 ID의 숫자가 작을수록 먼저 수행된 것이고 ID가 같은 값이라면 두 개 테이블의 조인이 이루어졌다고 해석할 수 있다.```
+
+**select_type** <br>
+SQL문을 구성하는 SELECT 문의 유형을 출력하는 항목이다. <br>
+
+- **SIMPLE** <br>
+UNION이나 내부 쿼리가 없는 SELECT 문을 의미
+- **PRIMARY** <br>
+서브쿼리가 포함된 SQL 문이 있을 때 첫번째 SELECT 문에 해당하는 구문에 표시되는 유형
+- **SUBQUERY** <br>
+독립적으로 수행되는 서브쿼리를 의미 <br>
+→ SELECT 절의 스칼라 서브쿼리와 WHERE 절의 중첩 서브쿼리일 경우에 해당
+- **DERIVED** <br>
+FROM 절에 작성된 서브쿼리라는 의미 <br>
+→ FROM 절의 별도 임시 테이블인 인라인 뷰를 말한다.
+- **UNION** <br>
+UNION 및 UNION ALL 구문으로 합쳐진 SELECT 문에서 첫 번째 SELECT 구문을 제외한 이후의 SELECT 구문에 해당한다는 걸 나타냄
