--- a/5장/선영/적절한 테이블 및 열 속성 설정으로 착한 쿼리 만들기.md
+++ b/5장/선영/적절한 테이블 및 열 속성 설정으로 착한 쿼리 만들기.md
@@ -27,4 +27,97 @@ WHERE 비고 = 'active';
 ```
 → 소문자 여부를 판단하기 위해서 아스키 코드를 추출하는 함수까지 사용해야 하는 것은 비효율적일 수 있다. <br>
 부서 테이블의 열에 대한 콜레이션을 조회하면 모든 부서 컬럼이 대소문자 구분이 없는 ```utf8_general_ci``` 콜레이션임을 확인할 수 있다. <br>
-※ 대소문자 구분을 위해 비고 열 콜레이션 값을 ```utf8mb4_bin```으로 변경할 수 있다. 
+※ 대소문자 구분을 위해 비고 열 콜레이션 값을 ```utf8mb4_bin```으로 변경할 수 있다. <br><br>
+
+### 대소문자가 섞인 데이터와 비교하는 나쁜 SQL문
+---
+**튜닝 전 수행 결과** <br>
+```
+SELECT 이름, 성, 성별, 생년월일
+FROM 사원
+WHERE LOWER(이름) = LOWER('MARY')
+AND 입사일자 >= STR_TO_DATE('1990-01-01', '%Y-%m-%d');
+
+96 rows in set (0.297sec)
+```
+→ LOWER() 함수를 사용하고 있기 때문에 이름 칼럼으로 만들어진 인덱스가 존재하더라도 활용할 수 없다. 또한 **입사일자의 경우 인덱스가 생성되어 있지만 입사일자 조건에 해당하는 데이터의 수는 전체 데이터의 약 43%이기 때문에 인덱스를 사용하지 않을 가능성이 있다.** (데이터 수에 따라 인덱스 사용 여부가 달라진다.)<br><br>
+이름 칼럼에 인덱스를 추가하여 튜닝이 가능하다. 하지만 이름 칼럼에서 대소문자를 구분하고 있다면 인덱스를 사용하기 어렵다. **따라서 대소문자를 구분하지 않는 콜레이션으로 변경할 수 있다.**
+<br>
+
+**튜닝 후 수행 결과** <br>
+```
+ALTER TABLE 사원 ADD COLUMN 소문자_이름 VARCHAR(14) NOT NULL AFTER 이름;
+
+-- 소문자_이름 칼럼은 대소문자를 구분하지 않고 있기 때문에 LOWER 함수를 사용할 필요는 없다.
+UPDATE 사원
+SET 소문자_이름 = LOWER(이름); 
+
+ALTER TABLE 사원 ADD INDEX I_소문자이름(소문자_이름);
+
+SELECT 이름, 성, 성별, 생년월일
+FROM 사원
+WHERE 소문자_이름 = 'MARY'
+AND 입사일자 >= '1990-01-01';
+
+96 rows in set (0.000sec)
+```
+✅ 위 튜닝은 <u>이름 정보를 비교하는 로직이 업무상 자주 호출된다는 가정 하에 진행</u>하였다. <br><br>
+→ 이름 칼럼은 입력받은 대소문자를 그대로 유지해야 하기 때문에 콜레이션을 변경하기 어렵다. 따라서 이름 칼럼의 데이터를 소문자로 변환하여 저장하는 소문자_이름 칼럼을 신규로 생성하였다. 신규 열은 별도의 콜레이션을 명시하지 않는 한 테이블의 콜레이션값을 상속받기 때문에 ```utf8_general_ci```로 설정되어 있다. 이후 소문자_이름 칼럼에 인덱스를 추가해준다. <br><br>
+**오직 이름에 대해 대소문자 구분없이 비교 처리를 수행하는 별도 열을 따로 생성한 것!** <br>
+데이터가 중복되기 때문에 비효율적인 방식으로 보일 수 있지만 이름 정보를 비교하는 로직이 자주 호출된다는 가정 하에 진행한 것이기 때문에 이러한 것이 하나의 튜닝 방법이 될 수도 있다. <br><br>
+
+### 분산 없이 큰 규모의 데이터를 사용하는 나쁜 SQL 문
+---
+**튜닝 전 수행 결과** <br>
+```
+SELECT COUNT(1)
+FROM 급여
+WHERE 시작일자 BETWEEN STR_TO_DATE('2000-01-01', '%Y-%m-%d') AND STR_TO_DATE('2000-12-31', '%Y-%m-%d');
+
+1 rows in set (1.000sec)
+```
+<img src='https://github.com/user-attachments/assets/97cd0461-e193-4de1-8a2c-0cdf3c7957c1' width='350'/> <br>
+→ 모든 연도의 데이터 건수를 확인하여 분포도를 살펴봤을 때 연도 간 데이터 편차는 조금씩 있으나 1986년부터 2002년까지 고루 퍼져 있다. <br>
+이때 주로 특정 월 또는 연 대상으로 호출되므로 모든 연도의 데이터에 접근할 필요는 없다. <br>
+이렇게 하나의 테이블로 구성된 급여 테이블을 <u>시작일자라는 열로 논리적으로 분할</u>하는 **파티셔닝**을 할 수 있다. <br>
+✅ **1985년 12월 31일보다 작은 시작일자 데이터는 p85라는 파티션에 적재되고, 1986년 12월 31일보다 작은 시작일자 데이터는 p86 파티션에 적재되는 방식이다.** <br>
+
+
+
+**튜닝 후 수행 결과** <br>
+```
+ALTER TABLE 급여
+partition by range COLUMNS(시작일자)
+(
+	partition p85 values less than('1985-12-31'),
+    partition p86 values less than('1986-12-31'),
+    partition p87 values less than('1987-12-31'),
+    partition p88 values less than('1988-12-31'),
+    partition p89 values less than('1989-12-31'),
+    partition p90 values less than('1990-12-31'),
+    partition p91 values less than('1991-12-31'),
+    partition p92 values less than('1992-12-31'),
+    partition p93 values less than('1993-12-31'),
+    partition p94 values less than('1994-12-31'),
+    partition p95 values less than('1995-12-31'),
+    partition p96 values less than('1996-12-31'),
+    partition p97 values less than('1997-12-31'),
+    partition p98 values less than('1998-12-31'),
+    partition p99 values less than('1999-12-31'),
+    partition p00 values less than('2000-12-31'),
+    partition p01 values less than('2001-12-31'),
+    partition p02 values less than('2002-12-31'),
+    partition p03 values less than(MAXVALUE)
+);
+
+SELECT COUNT(1)
+FROM 급여
+WHERE 시작일자 BETWEEN STR_TO_DATE('2000-01-01', '%Y-%m-%d') AND STR_TO_DATE('2000-12-31', '%Y-%m-%d');
+
+1 rows in set (0.187sec)
+```
+✅ 위 튜닝은 <u>급여 테이블의 시작일자 열에 대해 월 또는 연 단위의 조회가 빈번히 발생한다는 가정 하에 진행</u>하였다. <br><br>
+
+→ 시작일자가 범위 기준으로 호출되기 때문에 범위 방식 파티션으로 설정하였다. (```partition by range ~```) <br>
+범위 파티션을 설정하면 시작일자 데이터가 2000년도인 파티션에만 접근하여 SQL문 효율을 올릴 수 있다. <br><br>
+2000년도 데이터만 있는 p00 파티션에 접근한 뒤 2000-12-31의 다음 데이터도 2000년인지 확인하는 작업이 필요하기 때문에 실행 계획을 조회하면 partitions 항목에 p00, p01이 출력된다.
